--- a/packages/components/src/overlayHeader/OverlayHeader.less
+++ b/packages/components/src/overlayHeader/OverlayHeader.less
@@ -1,6 +1,8 @@
 @import (reference) '@transferwise/neptune-css/src/less/addons/_spacing-utilities.less';
 
 .np-overlay-header {
+  // This is the same height of FlowNavigation.
+  min-height: 97px;
   .separator {
     .m-x-2;
     height: var(--size-32);
